pr4/entrega/c_ast_descendente/ConstructorASTsTiny.java
/* ConstructorASTsTiny.java */
/* Generated By:JavaCC: Do not edit this line. ConstructorASTsTiny.java */
package c_ast_descendente;

import asint.SintaxisAbstractaTiny.*;
import asint.*;

public class ConstructorASTsTiny implements ConstructorASTsTinyConstants {
    protected ClaseSemanticaTiny sem = new ClaseSemanticaTiny();

  final public Prog analiza() throws ParseException {Prog prog;
    prog = programa();
    jj_consume_token(0);
{if ("" != null) return prog;}
    throw new Error("Missing return statement in function");
}

  final public Prog programa() throws ParseException {Bloque bloq;
    bloq = bloque();
{if ("" != null) return sem.prog(bloq);}
    throw new Error("Missing return statement in function");
}

  final public Bloque bloque() throws ParseException {DecsOpt decs; IntrsOpt intrs;
    jj_consume_token(35);
    decs = declar_opt();
    intrs = instr_opt();
    jj_consume_token(36);
{if ("" != null) return sem.bloque(decs, intrs);}
    throw new Error("Missing return statement in function");
}

  final public DecsOpt declar_opt() throws ParseException {LDecs decs;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case t_int:
    case t_real:
    case t_bool:
    case t_string:
    case proc:
    case struct:
    case type:
    case iden:
    case 45:{
      decs = lista_declaraciones();
      jj_consume_token(37);
{if ("" != null) return sem.si_decs(decs);}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
{if ("" != null) return sem.no_decs();}
    }
    throw new Error("Missing return statement in function");
}

  final public LDecs lista_declaraciones() throws ParseException {LDecs decs; Dec dec;
    dec = declaracion();
    decs = rlista_decs(sem.una_dec(dec));
{if ("" != null) return decs;}
    throw new Error("Missing return statement in function");
}

  final public LDecs rlista_decs(LDecs decsh) throws ParseException {LDecs decs; Dec dec;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 38:{
      jj_consume_token(38);
      dec = declaracion();
      decs = rlista_decs(sem.mas_decs(decsh, dec));
{if ("" != null) return decs;}
      break;
      }
    default:
      jj_la1[1] = jj_gen;
{if ("" != null) return decsh;}
    }
    throw new Error("Missing return statement in function");
}

  final public Dec declaracion() throws ParseException {Dec dec;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case t_int:
    case t_real:
    case t_bool:
    case t_string:
    case struct:
    case iden:
    case 45:{
      dec = declaracion_variable();
{if ("" != null) return dec;}
      break;
      }
    case type:{
      dec = declaracion_tipo();
{if ("" != null) return dec;}
      break;
      }
    case proc:{
      dec = declaracion_proc();
{if ("" != null) return dec;}
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Dec declaracion_variable() throws ParseException {Tipo tipo; Token id;
    tipo = tipo_0();
    id = jj_consume_token(iden);
{if ("" != null) return (Dec)sem.dec_var(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
}

  final public Dec declaracion_tipo() throws ParseException {Tipo tipo; Token id;
    jj_consume_token(type);
    tipo = tipo_0();
    id = jj_consume_token(iden);
{if ("" != null) return (Dec)sem.dec_tipo(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
}

  final public Dec declaracion_proc() throws ParseException {Token id; PForms pforms; Bloque prog;
    jj_consume_token(proc);
    id = jj_consume_token(iden);
    jj_consume_token(39);
    pforms = param_formales();
    jj_consume_token(40);
    prog = bloque();
{if ("" != null) return (Dec)sem.dec_proc(id.image, pforms, prog).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
}

  final public PForms param_formales() throws ParseException {LPForms pforms;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case t_int:
    case t_real:
    case t_bool:
    case t_string:
    case struct:
    case iden:
    case 45:{
      pforms = lista_params();
{if ("" != null) return sem.si_pforms(pforms);}
      break;
      }
    default:
      jj_la1[3] = jj_gen;
{if ("" != null) return sem.no_pforms();}
    }
    throw new Error("Missing return statement in function");
}

  final public LPForms lista_params() throws ParseException {LPForms pforms; PForm pform;
    pform = parametro();
    pforms = rlista_param(sem.una_pform(pform));
{if ("" != null) return pforms;}
    throw new Error("Missing return statement in function");
}

  final public LPForms rlista_param(LPForms pformsh) throws ParseException {LPForms pforms; PForm pform;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 41:{
      jj_consume_token(41);
      pform = parametro();
      pforms = rlista_param(sem.mas_pforms(pformsh, pform));
{if ("" != null) return pforms;}
      break;
      }
    default:
      jj_la1[4] = jj_gen;
{if ("" != null) return pformsh;}
    }
    throw new Error("Missing return statement in function");
}

  final public PForm parametro() throws ParseException {Tipo tipo; Ref ref; Token id;
    tipo = tipo_0();
    ref = ref_op();
    id = jj_consume_token(iden);
{if ("" != null) return (PForm)sem.pform(tipo, ref, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
}

  final public Ref ref_op() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 42:{
      jj_consume_token(42);
{if ("" != null) return sem.si_ref();}
      break;
      }
    default:
      jj_la1[5] = jj_gen;
{if ("" != null) return sem.no_ref();}
    }
    throw new Error("Missing return statement in function");
}

  final public Tipo tipo_0() throws ParseException {Tipo tipo0; Tipo tipo1;
    tipo0 = tipo_1();
    tipo1 = tipo_0Prime(tipo0);
{if ("" != null) return tipo1;}
    throw new Error("Missing return statement in function");
}

  final public Tipo tipo_0Prime(Tipo tipoh) throws ParseException {Tipo tipo; Token ent;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 43:{
      jj_consume_token(43);
      ent = jj_consume_token(lit_ent);
      jj_consume_token(44);
      tipo = tipo_0Prime((Tipo)sem.t_array(tipoh, ent.image).ponFila(ent.beginLine).ponCol(ent.beginColumn));
{if ("" != null) return tipo;}
      break;
      }
    default:
      jj_la1[6] = jj_gen;
{if ("" != null) return tipoh;}
    }
    throw new Error("Missing return statement in function");
}

  final public Tipo tipo_1() throws ParseException {Tipo tipo;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 45:{
      tipo = puntero();
{if ("" != null) return tipo;}
      break;
      }
    case t_int:
    case t_real:
    case t_bool:
    case t_string:
    case struct:
    case iden:{
      tipo = tipo_2();
{if ("" != null) return tipo;}
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Tipo tipo_2() throws ParseException {Tipo tipo; Token id;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case t_int:
    case t_real:
    case t_bool:
    case t_string:{
      tipo = tipo_basico();
{if ("" != null) return tipo;}
      break;
      }
    case iden:{
      id = jj_consume_token(iden);
{if ("" != null) return (Tipo)sem.t_iden(id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
      break;
      }
    case struct:{
      tipo = struct();
{if ("" != null) return tipo;}
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

// Se ajustó para que acepte tipos básicos
  final public 
  Tipo tipo_basico() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case t_int:{
      jj_consume_token(t_int);
{if ("" != null) return sem.t_int();}
      break;
      }
    case t_real:{
      jj_consume_token(t_real);
{if ("" != null) return sem.t_real();}
      break;
      }
    case t_bool:{
      jj_consume_token(t_bool);
{if ("" != null) return sem.t_bool();}
      break;
      }
    case t_string:{
      jj_consume_token(t_string);
{if ("" != null) return sem.t_string();}
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Tipo struct() throws ParseException {CamposS camposs;
    jj_consume_token(struct);
    jj_consume_token(35);
    camposs = lista_campos_struct();
    jj_consume_token(36);
{if ("" != null) return sem.t_struct(camposs);}
    throw new Error("Missing return statement in function");
}

  final public CamposS lista_campos_struct() throws ParseException {CampoS campos; CamposS camposs;
    campos = campo_struct();
    camposs = rlista_campo_struct(sem.un_cmp_s(campos));
{if ("" != null) return camposs;}
    throw new Error("Missing return statement in function");
}

  final public CamposS rlista_campo_struct(CamposS campossh) throws ParseException {CampoS campos; CamposS camposs;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 41:{
      jj_consume_token(41);
      campos = campo_struct();
      camposs = rlista_campo_struct(sem.mas_cmp_s(campossh, campos));
{if ("" != null) return camposs;}
      break;
      }
    default:
      jj_la1[10] = jj_gen;
{if ("" != null) return campossh;}
    }
    throw new Error("Missing return statement in function");
}

  final public CampoS campo_struct() throws ParseException {Tipo tipo; Token id;
    tipo = tipo_0();
    id = jj_consume_token(iden);
{if ("" != null) return (CampoS)sem.cmp_s(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
}

  final public Tipo puntero() throws ParseException {Tipo tipo;
    jj_consume_token(45);
    tipo = tipo_1();
{if ("" != null) return sem.t_punter(tipo);}
    throw new Error("Missing return statement in function");
}

  final public IntrsOpt instr_opt() throws ParseException {LIntrs intrs;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case t_if:
    case t_while:
    case t_new:
    case delete:
    case read:
    case write:
    case nl:
    case call:
    case 35:
    case 46:{
      intrs = lista_instrucciones();
{if ("" != null) return sem.si_intrs(intrs);}
      break;
      }
    default:
      jj_la1[11] = jj_gen;
{if ("" != null) return sem.no_intrs();}
    }
    throw new Error("Missing return statement in function");
}

  final public LIntrs lista_instrucciones() throws ParseException {Intr intr; LIntrs intrs;
    intr = instruccion();
    intrs = rlista_instrs(sem.una_intr(intr));
{if ("" != null) return intrs;}
    throw new Error("Missing return statement in function");
}

  final public LIntrs rlista_instrs(LIntrs intrsh) throws ParseException {Intr intr; LIntrs intrs;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 38:{
      jj_consume_token(38);
      intr = instruccion();
      intrs = rlista_instrs(sem.mas_intrs(intrsh, intr));
{if ("" != null) return intrs;}
      break;
      }
    default:
      jj_la1[12] = jj_gen;
{if ("" != null) return intrsh;}
    }
    throw new Error("Missing return statement in function");
}

  final public Intr instruccion() throws ParseException {Intr intr;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 46:{
      intr = instruccion_eval();
{if ("" != null) return intr;}
      break;
      }
    case t_if:{
      intr = instruccion_if();
{if ("" != null) return intr;}
      break;
      }
    case t_while:{
      intr = instruccion_while();
{if ("" != null) return intr;}
      break;
      }
    case read:{
      intr = instruccion_read();
{if ("" != null) return intr;}
      break;
      }
    case write:{
      intr = instruccion_write();
{if ("" != null) return intr;}
      break;
      }
    case nl:{
      intr = instruccion_nl();
{if ("" != null) return intr;}
      break;
      }
    case t_new:{
      intr = instruccion_new();
{if ("" != null) return intr;}
      break;
      }
    case delete:{
      intr = instruccion_delete();
{if ("" != null) return intr;}
      break;
      }
    case call:{
      intr = instruccion_call();
{if ("" != null) return intr;}
      break;
      }
    case 35:{
      intr = instruccion_compuesta();
{if ("" != null) return intr;}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Intr instruccion_eval() throws ParseException {Exp exp;
    jj_consume_token(46);
    exp = expresion();
{if ("" != null) return sem.i_eval(exp);}
    throw new Error("Missing return statement in function");
}

  final public Intr instruccion_if() throws ParseException {Exp exp; Bloque prog; I_Else ielse;
    jj_consume_token(t_if);
    exp = expresion();
    prog = bloque();
    ielse = instruccion_else_opt();
{if ("" != null) return sem.i_if(exp, prog, ielse);}
    throw new Error("Missing return statement in function");
}

  final public I_Else instruccion_else_opt() throws ParseException {Bloque prog;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case t_else:{
      jj_consume_token(t_else);
      prog = bloque();
{if ("" != null) return sem.si_else(prog);}
      break;
      }
    default:
      jj_la1[14] = jj_gen;
{if ("" != null) return sem.no_else();}
    }
    throw new Error("Missing return statement in function");
}

  final public Intr instruccion_while() throws ParseException {Exp exp; Bloque prog;
    jj_consume_token(t_while);
    exp = expresion();
    prog = bloque();
{if ("" != null) return sem.i_while(exp, prog);}
    throw new Error("Missing return statement in function");
}

  final public Intr instruccion_read() throws ParseException {Exp exp;
    jj_consume_token(read);
    exp = expresion();
{if ("" != null) return sem.i_read(exp);}
    throw new Error("Missing return statement in function");
}

  final public Intr instruccion_write() throws ParseException {Exp exp;
    jj_consume_token(write);
    exp = expresion();
{if ("" != null) return sem.i_write(exp);}
    throw new Error("Missing return statement in function");
}

  final public Intr instruccion_nl() throws ParseException {
    jj_consume_token(nl);
{if ("" != null) return sem.i_nl();}
    throw new Error("Missing return statement in function");
}

  final public Intr instruccion_new() throws ParseException {Exp exp;
    jj_consume_token(t_new);
    exp = expresion();
{if ("" != null) return sem.i_new(exp);}
    throw new Error("Missing return statement in function");
}

  final public Intr instruccion_delete() throws ParseException {Exp exp;
    jj_consume_token(delete);
    exp = expresion();
{if ("" != null) return sem.i_delete(exp);}
    throw new Error("Missing return statement in function");
}
